# qut-review

./: .gitignore  LICENSE  README.md  STYLE_GUIDE  commitlint.config.js  package-lock.json  package.json
.github/: 0-feature.md  1-bug.md  2-documentation.md
.github/ISSUE_TEMPLATE/: 4-refactor.md
.github/workflows/: api.yml  client-lint-format.yml  rust.yml  typescript.yml
.husky/: pre-commit
api/: .env  README.md
api/api/: Cargo.toml
api/api/src/: lib.rs  review_handler.rs  unit_handler.rs  user_handler.rs
api/application/: Cargo.toml
api/application/src/: auth.rs  database_helpers.rs  lib.rs  response_models.rs  serializer.rs  token.rs
api/application/src/dummy_data/: review_dummy_data.rs
api/application/src/review/: create.rs  delete.rs  read.rs  update.rs
api/application/src/unit/: create.rs  delete.rs  mod.rs  read.rs  update.rs
api/application/src/user/: create.rs  delete.rs  login.rs  mod.rs  read.rs  update.rs
api/domain/: Cargo.toml
api/domain/src/: models.rs  schema.rs
api/domain/src/enums/: grade.rs  mod.rs  role.rs  semester.rs
api/domain/src/models/: Semester.rs  mod.rs  review.rs  teaching_period.rs  unit.rs  user.rs
api/infrastructure/: Cargo.toml
api/infrastructure/migrations/2022-12-24-140721_create_review_and_user_table/: down.sql  up.sql
api/infrastructure/src/: lib.rs
api/infrastructure/src/review/: create.rs  delete.rs  read.rs  update.rs
api/infrastructure/src/unit/: create.rs  delete.rs  mod.rs  read.rs  update.rs
api/infrastructure/src/user/: create.rs  delete.rs  mod.rs  read.rs  update.rs
api/shared/: Cargo.toml
api/shared/src/: lib.rs  request_guards.rs  response_models.rs  token.rs
api/shared/src/dummy_data/: mod.rs  review_dummy_data.rs
client/: .editorconfig  .eslintrc.js  .gitignore  .prettierignore  README.md  next.config.js  package-lock.json  package.json  postcss.config.js  prettier.config.js  tailwind.config.js  tsconfig.json
client/app/: globals.css  head.tsx  layout.tsx  page.tsx  vars.css
client/app/(components)/(RecentCard)/: RecentCard.tsx  index.ts
client/app/(components)/(RecentDropdown)/: RecentDropdown.tsx  index.ts
client/app/recent/: RecentCard.tsx
client/app/review/: ReviewCard.tsx  page.module.scss  page.tsx
client/app/review/(Reviews)/: Reviews.tsx
client/app/review/(Stats)/: Stats.tsx
client/app/review/(components)/(Form)/: Form.module.scss  Form.tsx  FormContext.ts  FormHandler.ts  FormReducer.ts  FormState.ts
client/app/review/create/: page.module.scss  page.tsx
client/app/review/create/(components)/(Form)/: Form.module.scss  Form.tsx
client/app/unit/[code]/: page.tsx
client/components/Footer/: Footer.module.scss  Footer.tsx
client/components/Header/: Header.module.scss  Header.tsx
client/components/UI/Checkbox/: Checkbox.tsx
client/components/UI/Dropdown/: Dropdown.module.scss  Dropdown.tsx
client/components/UI/FormItem/: FormItem.module.scss  FormItem.tsx  index.ts
client/components/UI/Numeric/: Numeric.tsx  index.ts
client/components/UI/Selection/: Selection.tsx  index.ts
client/components/UI/TextArea/: TextArea.module.scss  TextArea.tsx
client/components/cards/unit-review/: UnitReviewCard.tsx
client/components/ui/hero/: Hero.tsx
client/components/ui/infobox/: InfoBox.tsx
client/components/ui/review-stars/: ReviewStars.tsx
client/components/utility/pagination/: Pagination.tsx
client/helper/: Validator.ts
client/tools/: generateTypes.ts
client/types/: Recent.ts  new_review.ts  new_user.ts  review.ts  semester.ts  types.d.ts  unit.ts  user.ts
client/types/infobox/: types.ts
client/types/recent/: recent.ts
client/types/review/: review.ts  types.ts
rust-types-to-json/: Cargo.toml  package.json
rust-types-to-json/src/: index.ts  main.rs
rust-types-to-json/src/schemas/: new_review.json  new_user.json  review.json  semester.json  unit.json  user.json
