[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }

rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0.88"
dotenvy = "0.15.6"                    # A well-maintained fork of the dotenv crate
jsonwebtoken = "8.1.1"

schemars = "0.8.10"
okapi = { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc", "uuid"] }
indexmap = "1.9.2"              # A hash table with consistent order and fast iteration.
